<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	android:background="#ffffff">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="1">
		    <TextView
		       	android:id="@+id/donate_title"
		       	android:layout_width="fill_parent"
		       	android:layout_height="wrap_content"
		       	android:padding="10dp"
		       	android:text="@string/work_with_us"
		       	android:textStyle="bold"
		       	android:textColor="#ee0000"
		       	android:textSize="12pt"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10sp"
				android:textColor="#000000"
				android:textSize="8pt"
				android:text="@string/work_with_us_content1"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10sp"
				android:textColor="#000000"
				android:textSize="8pt"
				android:text="@string/work_with_us_content2"/>
			<Button
				android:id="@+id/work_with_us_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="40sp"
				android:layout_marginRight="40sp"
				android:text="@string/work_with_us_button_text"
				android:textSize="7pt"
				android:textStyle="italic"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>	