<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	android:background="#ffffff">
	
    <ImageView
		android:id="@+id/donate_view_image"
    	android:layout_width="300dp"
    	android:layout_height="110dp"
    	android:scaleType="fitXY"
    	android:layout_centerHorizontal="true"
    	android:paddingTop="15dp"
    	android:paddingBottom="5dp"/>
    
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@+id/donate_view_image"
		android:layout_marginBottom="30dp">
		
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="1">
		    <TextView
		       	android:id="@+id/donate_title"
		       	android:layout_width="fill_parent"
		       	android:layout_height="wrap_content"
		       	android:padding="10dp"
		       	android:text="@string/donate"
		       	android:textStyle="bold"
		       	android:textColor="#ee0000"
		       	android:textSize="12pt"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10sp"
				android:textColor="#000000"
				android:textSize="8pt"
				android:text="@string/donate_content1"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10sp"
				android:textColor="#000000"
				android:textSize="8pt"
				android:text="@string/donate_content2"/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10sp"
				android:textColor="#000000"
				android:textSize="8pt"
				android:text="@string/donate_content3"/>
			<TextView
				android:id="@+id/donate_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginBottom="20dp"
				android:text="@string/donate_button_text"
				android:textColor="#000000"
				android:textSize="10pt"
				android:textStyle="bold" />
		</LinearLayout>
	</ScrollView>
	
	<ImageView
		android:layout_width="fill_parent"
		android:layout_height="40dp"
		android:scaleType="fitXY"
		android:layout_alignParentBottom="true"
		android:src="@drawable/main_menu_bottom" />
</RelativeLayout>